@@ -1,3 +1,8 @@
+2016-06-17	A bit more template parameter checking.
+
+		include/innocent-pear/yarly.h :
+		- now checks that type T in yarly<, T, ...> is legitimate
+
 2016-06-12	Some template parameter checking.
 
 		include/innocent-pear/kthxbai.h :
